# sdk-nrf

./: CODEOWNERS  west.yml
.github/: test-spec.yml
app/: CMakeLists.txt  Kconfig  overlay-loopback.conf  overlay-tracing.conf  overlay-zperf-netusb.conf  overlay-zperf.conf  prj.conf
app/inc/: wfa_cmds.h  wfa_main.h  wfa_rsp.h  wfa_tg.h  wfa_types.h  wfa_ver.h
app/src/: wfa_dut_shell.c  wifi_main.c
app/src/dut/: wfa_cmdproc.c  wfa_cs.c  wfa_dut.c  wfa_dut.h  wfa_dut_init.c  wfa_sock.c  wfa_tg.c  wfa_thr.c
boards/arm/nrf7002dk_nrf5340/: nrf5340_cpuapp_common.dts
boards/arm/nrf7002dk_nrf5340/doc/: index.rst
boards/shields/nrf7002_ek/: Kconfig.shield  nrf7002_ek.overlay
cmake/sysbuild/: nrf700x.cmake
doc/nrf/: app_boards.rst  index.rst  links.txt  ug_nrf70.rst  ug_nrf7002.rst
doc/nrf/drivers/wifi/: nrf70_native.rst
doc/nrf/includes/: sample_board_rows.txt
doc/nrf/releases_and_maturity/releases/: release-notes-changelog.rst
drivers/: CMakeLists.txt  Kconfig
drivers/wifi/: CMakeLists.txt  Kconfig
drivers/wifi/bus_if/bal/inc/: bal_api.h  bal_ops.h  bal_structs.h
drivers/wifi/bus_if/bal/src/: bal.c
drivers/wifi/fw_if/umac_if/inc/: fmac_ap.h  fmac_api.h  fmac_bb.h  fmac_cmd.h  fmac_event.h  fmac_peer.h  fmac_rx.h  fmac_structs.h  fmac_tx.h  fmac_util.h  fmac_vif.h
drivers/wifi/fw_if/umac_if/src/: cmd.c  event.c  fmac_ap.c  fmac_peer.c  fmac_util.c  fmac_vif.c  main.c  rx.c  tx.c
drivers/wifi/hw_if/hal/inc/: hal_api.h  hal_common.h  hal_fw_patch_loader.h  hal_interrupt.h  hal_mem.h  hal_reg.h  hal_structs.h  pal.h
drivers/wifi/hw_if/hal/src/: hal_api.c  hal_mem.c  (+5 more)
drivers/wifi/nrf700x/: CMakeLists.txt  Kconfig  Kconfig.nrf700x  Kconfig.orig
drivers/wifi/nrf700x/src/: fmac_main.c  net_if.c
drivers/wifi/os_if/os/zephyr/src/qspi/: CMakeLists.txt  prj.conf
drivers/wifi/os_if/os/zephyr/src/qspi/src/: device.c  interrupts.c  qspi_if.c  qspi_if.h  qspi_main.c  spi_context.h  spi_if.c  spi_if.h  spi_nor.h
drivers/wifi/scripts/fullmac/: explorer.sh  generate_driver_calder.sh  generate_driver_donatello.sh  lpw.sh
drivers/wifi/utils/inc/: list.h  queue.h
drivers/wifi/utils/src/: list.c  queue.c
dts/bindings/wifi/: nordic,nrf7002-qspi.yaml
include/net/: library.h
modules/hostap/: CMakeLists.txt  Kconfig
modules/hostap/src/: supp_main.c
samples/net/mqtt/: CMakeLists.txt  prj.conf
samples/wifi/bm_scan/: CMakeLists.txt  Kconfig  Kconfig.nrf_wifi  README.rst  prj.conf  sample.yaml
samples/wifi/bm_scan/inc/: scan.h
samples/wifi/bm_scan/src/: scan.c
samples/wifi/offloaded_raw_tx/src/: main.c
samples/wifi/ps_client/: sample.yaml
samples/wifi/ps_client/src/: main.c
samples/wifi/radio_test/: CMakeLists.txt  Kconfig  sample.yaml
samples/wifi/radio_test/aci/: CMakeLists.txt
samples/wifi/radio_test/src/: nrf_wifi_radio_test_shell.c
samples/wifi/raw_tx_packet/: CMakeLists.txt  Kconfig  README.rst  overlay-ble.conf  prj.conf
samples/wifi/raw_tx_packet/src/: main.c
samples/wifi/scan/src/: main.c
samples/wifi/shell/: CMakeLists.txt  README.rst  overlay-nrf-wifi-util.conf  overlay-zperf.conf  prj.conf
samples/wifi/shell/src/: main.c  supp_shell.c  wifi_shell.c
samples/wifi/shutdown/: prj.conf
samples/wifi/shutdown/src/: main.c
samples/wifi/sta/: Kconfig  prj.conf  sample.yaml
samples/wifi/sta/src/: main.c
samples/wifi/wfa_qt_app/: CMakeLists.txt  Kconfig  overlay-netusb.conf  prj.conf
samples/wifi/wfa_qt_app/src/: qt_app_main.c
subsys/net/l2/: Kconfig
subsys/net/l2/wifi/: wifi_mgmt.c  wifi_shell.c
subsys/net/lib/: CMakeLists.txt  Kconfig
subsys/net/lib/wifi_ready/: CMakeLists.txt  Kconfig  wifi_ready_events.c
sysbuild/: Kconfig.wifi
tests/wifi/memtest/: CMakeLists.txt  Kconfig  testcase.yaml
tests/wifi/memtest/src/: main.c
tests/wifi/ps_client/src/: main.c
tests/wifi/raw_tx/: CMakeLists.txt  prj.conf  testcase.yaml
tests/wifi/raw_tx/src/: main.c
tests/wifi/raw_tx/test_vectors/: udp_ipv6_zerocsum.vec
(+161 files in other folders)
